# AMP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: amp.cpp
clients/AMP-App/: AMP-App.sln
clients/AMP-App/AMP-App/AMP-App/: AMP-App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
clients/AMP-App/AMP-App/AMP-App (Package)/: AMP-App (Package).wapproj  Package.appxmanifest
clients/AMPClient-UWP/: AMPClient-UWP.sln
clients/AMPClient-UWP/AMPClient-UWP/: AMPClient-UWP.csproj  AlbumsPage.xaml  AlbumsPage.xaml.cs  App.xaml  App.xaml.cs  ArtistsPage.xaml  ArtistsPage.xaml.cs  Database.cs  DatabaseGrpc.cs  FoldersPage.xaml  FoldersPage.xaml.cs  HomePage.xaml  HomePage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  PlayerGrpc.cs  SettingsPage.xaml  SettingsPage.xaml.cs  Sys.cs  TracksPage.xaml  TracksPage.xaml.cs
clients/AMPClient-UWP/AMPClient-UWP/Properties/: AssemblyInfo.cs
clients/ampcli/: Common.cs  Database.cs  Player.cs  Program.cs  SysGrpc.cs  ampcli.csproj
db/: AMP.erdplus  AMP.sql  AMP_ER.erdplus
grpc/protobuf/cpp/: common.grpc.pb.cc  common.grpc.pb.h  common.pb.cc  common.pb.h  database.grpc.pb.cc  database.grpc.pb.h  database.pb.cc  database.pb.h  player.grpc.pb.cc  player.grpc.pb.h  player.pb.cc  player.pb.h  sys.grpc.pb.cc  sys.grpc.pb.h  sys.pb.cc  sys.pb.h
grpc/protobuf/csharp/: DatabaseGrpc.cs  Player.cs
grpc/protos/: database.proto  player.proto  sys.proto
lib/: amp.hpp
lib/amp/: context.cpp  context.hpp  folder_hash.cpp  folder_hash.hpp  jsonrpc.cpp  jsonrpc.hpp  log.hpp  method.hpp  server.cpp  server.hpp
lib/amp/audio/: player.cpp  player.hpp
lib/amp/db/: database_manager.cpp  database_manager.hpp  pqxx_fix.hpp
lib/amp/db/scheme/: album.hpp  artist.hpp  genre.hpp  scheme.hpp  track.hpp
lib/amp/methods/: add_path.hpp  calc.hpp  play.hpp
lib/amp/rpc/: server.cpp  server.hpp
lib/amp/rpc/services/: service_data.hpp
lib/amp/rpc/services/database_service/: database_service.cpp  database_service.hpp
lib/amp/rpc/services/player_service/: player_service.cpp  player_service.hpp
lib/amp/rpc/services/sys_service/: sys_service.cpp  sys_service.hpp
lib/amp/utils/: path.cpp  path.hpp  str.cpp  str.hpp
test/: CMakeLists.txt  test_client.cpp  test_ffmpeg.cpp  test_playback.cpp  test_player.cpp  test_taglib.cpp
test/grpc/: test_grpc_client.cpp  test_grpc_server.cpp
